# node-libpd-napi

./: .gitignore  CMakeLists.txt  README.md  electron.js  index.js  package-lock.json  package.json
example/electron/: index.html  libpd.dylib  main.js  package-lock.json  package.json  preload.js  renderer.js
example/electron/patches/: patch.pd
example/node/: main.js  package-lock.json  package.json
example/node/patches/: patch.pd
include/: pd_engine.h
scripts/: post-install.js
src/: addon.cc  pd_engine.cc
